--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -29,6 +29,18 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.techbellys.utility</groupId>
+            <artifactId>aws-bedrock</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.techbellys.utility</groupId>
+            <artifactId>aws-comprehend</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
