--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -28,5 +28,18 @@ security:
     secret-key: ${JWT_SECRET_KEY}
     issuer: Content Moderation API
 
+aws:
+  bedrock:
+    region: ${BEDROCK_REGION}
+    credentials:
+      access-key: ${BEDROCK_AWS_ACCESS_KEY}
+      secret-key: ${BEDROCK_AWS_SECRET_KEY}
+  comprehend:
+    region: ${COMPREHEND_REGION}
+    credentials:
+      access-key: ${COMPREHEND_AWS_ACCESS_KEY}
+      secret-key: ${COMPREHEND_AWS_SECRET_KEY}
+
+
 mongock:
   migration-scan-package: com.techbellys.mongo.changelogs
