--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
 			<version>5.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
