--- a/utility-modules/aws-comprehend/pom.xml
+++ b/utility-modules/aws-comprehend/pom.xml
@@ -4,29 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.techbellys</groupId>
-        <artifactId>content-moderation</artifactId>
+        <groupId>com.techbellys.utility</groupId>
+        <artifactId>utility-modules</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.techbellys.utility</groupId>
-    <artifactId>utility-modules</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>utility modules</name>
-    <description>utility modules</description>
-    <packaging>pom</packaging>
-
-    <modules>
-
-        <module>aws-bedrock</module>
-        <module>aws-comprehend</module>
-    </modules>
-
+    <artifactId>aws-comprehend</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>comprehend</artifactId>
+            <version>2.29.39</version>
+        </dependency>
+    </dependencies>
 
 </project>
